--- a/style.scss
+++ b/style.scss
@@ -78,29 +78,37 @@ textarea:not([rows]) {
 }
 body {
  font-family: "League Spartan", sans-serif;
+ background-color: black;
 }
 .container {
- margin: 0 0.9rem;
  background-image: url(../images/bg-pattern-top-mobile.svg),
   url(../images/bg-pattern-bottom-mobile.svg);
  background-repeat: no-repeat, no-repeat;
- background-size: contain;
- background-position: top, bottom;
+ background-size: contain, 100% 50%;
+ background-position: top left, bottom -18rem right;
  background-color: hsl(0, 0%, 100%);
-
+ display: flex;
+ flex-direction: column;
+ padding: 1rem;
  @media (min-width: 600px) {
   background-image: url(../images/bg-pattern-top-desktop.svg),
    url(../images/bg-pattern-bottom-desktop.svg);
   background-repeat: no-repeat, no-repeat;
-  background-size: auto, auto;
-  background-position: top left, bottom right;
+  background-size: auto, 100% 90%;
+  background-position: top left -10rem, bottom 0rem right -7rem;
+  width: 90%;
+  margin: 3rem auto;
  }
 }
 .row-1 {
  display: flex;
  flex-direction: column;
- @media (min-width: 600px) {
+ align-items: baseline;
+ gap: 3rem;
+ @media (min-width: 1235px) {
   flex-direction: row;
+  justify-content: space-between;
+  padding: 3rem 5rem;
  }
 }
 .col-1 {
@@ -110,35 +118,73 @@ body {
  align-items: center;
  text-align: center;
  color: hsl(303, 10%, 53%);
+ margin: 0 auto;
+ p {
+  font-size: 15px;
+  max-width: 30ch;
+  @media screen {
+   max-width: 45ch;
+  }
+ }
+ @media (min-width: 1235px) {
+  text-align: left;
+  align-items: flex-start;
+  margin: 0;
+ }
 }
 h1 {
  color: hsl(300, 43%, 22%);
  max-width: 14ch;
- margin-top: 4rem;
+ margin-top: 3rem;
  text-wrap: initial;
-}
-p {
- font-size: 15px;
- max-width: 30ch;
+ @media (min-width: 600px) {
+  margin-top: 4rem;
+ }
 }
 .col-2 {
  display: flex;
  flex-direction: column;
- margin-bottom: 2.8rem;
+ margin-bottom: 1.8rem;
+ width: 100%;
+ @media (min-width: 600px) {
+  width: 50%;
+  margin: 1rem auto;
+ }
+ @media (min-width: 1235px) {
+  width: 50%;
+ }
 }
 .h4 {
  display: flex;
  flex-direction: column;
- justify-content: space-between;
- gap: 0.7rem;
  align-items: center;
- padding: 10px;
- margin-top: 1rem;
+ gap: 0.7rem;
+ padding: 10px 1.5rem;
+ margin: 1rem 0;
  background-color: hsl(300, 24%, 96%);
  border-radius: 5px;
  font-weight: 700;
  color: hsl(300, 43%, 22%);
+ @media (min-width: 1235px) {
+  gap: 1rem;
+  flex-direction: row;
+  width: 85%;
+  margin-bottom: 0;
+ }
+}
+.one {
  @media (min-width: 600px) {
+  align-self: flex-start;
+ }
+}
+.two {
+ @media (min-width: 600px) {
+  align-self: center;
+ }
+}
+.three {
+ @media (min-width: 600px) {
+  align-self: flex-end;
  }
 }
 .star {
@@ -146,17 +192,38 @@ p {
  display: flex;
  gap: 0.5rem;
 }
+.row-2 {
+ display: flex;
+ flex-direction: column;
+ @media (min-width: 600px) {
+  width: 50%;
+  margin: 1rem auto;
+ }
+ @media (min-width: 1235px) {
+  width: auto;
+
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 3rem 5rem;
+  height: 25rem;
+  gap: 1rem;
+ }
+}
 .col-3,
 .col-4,
 .col-5 {
  background-color: hsl(300, 43%, 22%);
  color: hsl(0, 0%, 100%);
- padding: 1rem;
+ padding: 2rem;
  border-radius: 8px;
  margin-bottom: 1rem;
+ width: 100%;
  p {
-  margin: 0 0 0.5rem 0.5rem;
-  max-width: 80%;
+  font-size: 15px;
+  @media (min-width: 600px) {
+   max-width: 95%;
+   margin: 0;
+  }
  }
 }
 img {
@@ -172,7 +239,7 @@ img {
  align-items: center;
  margin-bottom: 1.2rem;
  .img-wrap {
-  width: 2.8rem;
+  max-width: 2.8rem;
  }
  span {
   h4 {
